--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,29 @@
 @font-face {
   font-family: "Helvetica Now Display";
   src: local("Helvetica Now Display");
+  font-family: "Helvetica Now Display Bold";
+  src: local("Helvetica Now Display Bold");
 }
 
 @-webkit-keyframes slidein-row-1 {
-  from {
-    margin-left: 0;
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
-  to {
-    margin-left: -803px;
+  100% {
+    -webkit-transform: translateX(-950px);
+            transform: translateX(-950px);
   }
 }
 
 @keyframes slidein-row-1 {
-  from {
-    margin-left: 0;
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
-  to {
-    margin-left: -803px;
+  100% {
+    -webkit-transform: translateX(-950px);
+            transform: translateX(-950px);
   }
 }
 
@@ -55,6 +61,14 @@
   to {
     margin-left: -790px;
   }
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.mb-m15-lg20 {
+  margin-bottom: 15px;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -124,6 +138,14 @@ button {
   border: none;
 }
 
+.offer-page__links-desktop {
+  display: none;
+}
+
+.recruitment-stages__large-steps {
+  display: none;
+}
+
 .offer-page {
   padding: 49px 20px 63px 20px;
   background-color: #020213;
@@ -163,6 +185,12 @@ button {
 .offer-page__menu .offer-page__menu-wrapper a .offer-page__logo-wrapper .offer-page__title {
   padding-left: 5px;
   color: #FFFFFF;
+  font-family: "Helvetica Now Display";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 111%;
+  letter-spacing: 1px;
 }
 
 .offer-page__menu .offer-page__menu-wrapper a .offer-page__menu-link-wrapper {
@@ -182,7 +210,7 @@ button {
 }
 
 .offer-page .offer-page__about-team .offer-page__secondary-title {
-  font-family: 'Helvetica Now Display';
+  font-family: "Helvetica Now Display";
   font-style: normal;
   font-weight: 900;
   font-size: 48px;
@@ -192,8 +220,12 @@ button {
   padding-bottom: 15px;
 }
 
+.offer-page .offer-page__about-team .offer-page__secondary-title .offer-page__secondary-title-color-symbol {
+  color: #18E8A4;
+}
+
 .offer-page .offer-page__about-team .offer-page__description {
-  font-family: 'Helvetica Now Display';
+  font-family: "Helvetica Now Display";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -204,30 +236,35 @@ button {
 
 .offer-page .offer-page__photo-slider {
   margin-bottom: -6px;
-  margin-left: -8px;
+  margin-left: -20px;
   margin-right: -20px;
+  overflow: hidden;
 }
 
 .offer-page .offer-page__photo-slider .offer-page__photo-row {
-  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   margin-bottom: 6px;
+  margin-left: 8px;
 }
 
 .offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo {
-  display: block;
-  max-width: 120px;
-  height: 66px;
-  margin-left: 8px;
-  border-radius: 10px;
+  margin-left: 6px;
 }
 
-.offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo_with-opacity {
+.offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo > img {
+  max-width: 120px;
+  height: 66px;
+  border-radius: 10px;
+  width: auto;
+}
+
+.offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo_shadow-black {
   -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(rgba(0, 0, 0, 0)));
+  mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(rgba(0, 0, 0, 0)));
 }
 
 .offer-page .offer-page__photo-slider .photo-row-1 {
@@ -280,5 +317,412 @@ button {
   background-color: #18E8A4;
   border-radius: 10px;
   margin: auto;
+}
+
+.about-company {
+  padding: 49px 20px 48px 20px;
+  background-color: #FFFFFF;
+}
+
+.about-company .about-company__title {
+  font-family: "Helvetica Now Display";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 90%;
+  letter-spacing: 2px;
+  color: #202523;
+  margin-bottom: 30px;
+}
+
+.about-company .about-company__text {
+  font-family: 'Helvetica Now Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 180%;
+  color: #545460;
+}
+
+.recruitment-process {
+  background-color: #D5D4D9;
+}
+
+.recruitment-process .about-company {
+  background-color: inherit;
+}
+
+.recruitment-process .recruitment-stages {
+  margin-top: 55px;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-y: hidden;
+  scrollbar-width: none;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card-wrapper {
+  margin-left: 20px;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card {
+  margin-bottom: 74px;
+  padding: 32px 25px 102px 25px;
+  background-color: #FFFFFF;
+  border-radius: 16px;
+  min-height: 484px;
+  position: relative;
+  min-width: 228px;
+  margin-right: 15px;
+  z-index: 10;
+  -webkit-box-shadow: 0px 32px 16px rgba(0, 0, 0, 0.09), 0px 16px 8px rgba(0, 0, 0, 0.09), 0px 8px 4px rgba(0, 0, 0, 0.09), 0px 4px 2px rgba(0, 0, 0, 0.09), 0px 2px 1px rgba(0, 0, 0, 0.09);
+          box-shadow: 0px 32px 16px rgba(0, 0, 0, 0.09), 0px 16px 8px rgba(0, 0, 0, 0.09), 0px 8px 4px rgba(0, 0, 0, 0.09), 0px 4px 2px rgba(0, 0, 0, 0.09), 0px 2px 1px rgba(0, 0, 0, 0.09);
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card::before {
+  content: attr(data-step);
+  position: absolute;
+  font-family: "Helvetica Now Display Bold";
+  font-weight: bold;
+  font-size: 164px;
+  top: 350px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #596067;
+  opacity: 0.1;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card .recruitment-stages__sub-title {
+  font-family: "Helvetica Now Display";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 110%;
+  text-transform: uppercase;
+  color: #545460;
+  margin-bottom: 16px;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card .recruitment-stages__title {
+  font-family: "Helvetica Now Display";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 110%;
+  color: #202523;
+  margin-bottom: 24px;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__card .recruitment-stages__about-text {
+  font-family: "Helvetica Now Display";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 25px;
+  color: #596067;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__image-wrapper {
+  margin-left: -20px;
+  margin-right: -20px;
+  position: relative;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__card-list .recruitment-stages__image-wrapper .recruitment-stages__image {
+  position: absolute;
+  top: -193px;
+  z-index: 991;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__paginator {
+  padding-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 112px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto;
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__paginator .recruitment-stages__paginator-item {
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.09);
+          box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.09);
+}
+
+.recruitment-process .recruitment-stages .recruitment-stages__paginator .recruitment-stages__paginator-item_active {
+  background: linear-gradient(0deg, #18e8a4, #18e8a4), linear-gradient(117.15deg, #1bd1fc 0%, #316dd1 100%);
+  width: 40px;
+  -webkit-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.09), 0px 6px 8px rgba(0, 0, 0, 0.09), 0px 4px 4px rgba(0, 0, 0, 0.09), 0px 2px 2px rgba(0, 0, 0, 0.09), 0px 1px 1px rgba(0, 0, 0, 0.09);
+          box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.09), 0px 6px 8px rgba(0, 0, 0, 0.09), 0px 4px 4px rgba(0, 0, 0, 0.09), 0px 2px 2px rgba(0, 0, 0, 0.09), 0px 1px 1px rgba(0, 0, 0, 0.09);
+  border-radius: 16px;
+}
+
+@media (min-width: 760px) {
+  .offer-page .offer-page__about-team .offer-page__secondary-title {
+    font-size: 56px;
+    padding-bottom: 24px;
+  }
+  .offer-page .offer-page__about-team .offer-page__description {
+    padding-bottom: 19px;
+  }
+  .offer-page .offer-page__default-button-wrapper.default-button-wrapper {
+    text-align: left;
+    padding-top: 6px;
+  }
+  .about-company {
+    padding-top: 50px;
+  }
+  .offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo {
+    margin-left: 10px;
+  }
+  .offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo > img {
+    max-width: 188px;
+    height: 105px;
+  }
+  .offer-page .offer-page__default-button-wrapper.default-button-wrapper .offer-page__default-button {
+    margin-left: 80px;
+  }
+  .about-company .about-company__title {
+    font-family: "Helvetica Now Display";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 90%;
+    letter-spacing: -1px;
+    color: #202523;
+    margin-bottom: 30px;
+  }
+  .about-company__text-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .about-company__text {
+    max-width: 340px;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__card {
+    max-width: 354px;
+    height: 366px;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__image-wrapper
+.recruitment-stages__image {
+    top: -245px;
+  }
+}
+
+@media (min-width: 1430px) {
+  .offer-page__menu,
+  .offer-page__about-team,
+  .about-company {
+    max-width: 1260px;
+    margin: auto;
+  }
+  .offer-page__menu .offer-page__menu-wrapper .offer-page__links {
+    display: none;
+  }
+  .offer-page__menu .offer-page__menu-wrapper {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .offer-page {
+    padding: 49px 90px 63px 90px;
+  }
+  .offer-page__links-desktop {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .offer-page__links-desktop .offer-page__links-desktop-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 337px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .offer-page__links-desktop .offer-page__links-desktop-wrapper_secondary-style {
+    margin-left: 300px;
+  }
+  .offer-page__links-desktop ul .offer-page__desktop-link {
+    color: #FFFFFF;
+    font-family: "Helvetica Now Display";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .offer-page__links-desktop ul .offer-page__desktop-link:hover {
+    color: #18E8A4;
+    cursor: pointer;
+  }
+  .offer-page__links-desktop ul .offer-page__desktop-link_secondary-style {
+    border: 2px solid #18E8A4;
+    border-radius: 383px;
+    padding: 8px 35px;
+  }
+  .offer-page .offer-page__about-team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .offer-page .offer-page__about-team .offer-page__secondary-title {
+    width: 390px;
+  }
+  .offer-page .offer-page__about-team .offer-page__description {
+    width: 370px;
+    margin-left: 6.5%;
+  }
+  .offer-page
+.offer-page__photo-slider
+.offer-page__photo-row
+.offer-page__photo {
+    position: relative;
+    max-width: none;
+    margin-left: 20px;
+  }
+  .offer-page
+.offer-page__photo-slider
+.offer-page__photo-row
+.offer-page__photo:hover::before {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(24, 232, 164, 0.5);
+    border-radius: 10px;
+    content: "See All Roles";
+    font-family: "Helvetica Now Display Bold";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 120%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .offer-page .offer-page__photo-slider .offer-page__photo-row .offer-page__photo > img {
+    max-width: 378px;
+    height: 212px;
+  }
+  .offer-page .offer-page__photo-slider {
+    margin-bottom: 30px;
+    margin-left: -90px;
+    margin-right: -90px;
+  }
+  .offer-page .offer-page__default-button-wrapper.default-button-wrapper {
+    display: none;
+  }
+  .about-company {
+    padding: 49px 90px 48px 90px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .about-company .column-lg {
+    display: block;
+  }
+  .about-company .ml-415-lg {
+    margin-left: 415px;
+  }
+  .about-company .about-company__title {
+    font-size: 62px;
+    width: 320px;
+  }
+  .about-company__text-wrapper {
+    width: 714px;
+  }
+  .about-company__text-wrapper .about-company__text {
+    max-width: none;
+  }
+  .about-company__text-wrapper .mb-m15-lg20 {
+    margin-bottom: 20px;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__card
+.recruitment-stages__title {
+    font-size: 36px;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__card {
+    width: 577px;
+    max-width: 620px;
+  }
+  .recruitment-process .recruitment-stages .recruitment-stages__card-list {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .recruitment-process .recruitment-stages .recruitment-stages__card-list {
+    position: relative;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__card
+> * {
+    width: 50%;
+  }
+  .recruitment-stages__image-wrapper {
+    display: none;
+  }
+  .recruitment-stages__large-steps {
+    display: block;
+    position: absolute;
+    top: 504px;
+    z-index: 100000;
+    width: 90rem;
+  }
+  .recruitment-process
+.recruitment-stages
+.recruitment-stages__card-list
+.recruitment-stages__card::before {
+    font-size: 315px;
+    top: 307px;
+    left: 82%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
